--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,7 +12,6 @@
     "@types/node": "^16.18.25",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
-    "dotenv": "^16.0.3",
     "env-cmd": "^10.1.0",
     "framer-motion": "^10.12.4",
     "react": "^18.2.0",
@@ -22,6 +22,9 @@
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "scripts": {
     "start": "react-scripts start",
